--- a/index.html
+++ b/index.html
@@ -4,10 +4,42 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="hamburger.js" defer></script>
+    <link rel="stylesheet" href="style.css">
     <title>Vite App</title>
   </head>
-  <body>
-    <div id="app"></div>
+  <body>  
+    <header>
+    <div class="container"> 
+      <nav class="navbar">
+        <a href="#" class="nav-branding">[[LOGO]]</a>
+        <ul class="nav-menu">
+          <li class="nav-item">
+            <a href="#" class="nav-link">Hem</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">Webbyrå</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">Tjänster</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">Om Oss</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link"></a>Kontakt</li>
+
+        </ul>
+        <div class="hamburger">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </div>
+      </nav>
+   </div>
+ </header>
+
+    </div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
