--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="src/hamburger.ts" defer></script>
-    <script src="src/header.ts" defer></script>
+    <script src="src/hamburger.js" defer></script>
+    <script src="src/header.js" defer></script>
     <link rel="stylesheet" href="src/style.css">
     <title>Vite App</title>
   </head>
