--- a/index.html
+++ b/index.html
@@ -4,10 +4,25 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css">
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <header class="topnav" id="header">
+        <div class="logo">PixelSpace</div>
+        <label class="hamburger-menu">
+          <input type="checkbox">
+        </label>
+        <nav class="sidebar">
+          <ul>
+            <div><a href="#">Om oss</a></div>
+            <div><a href="#">Våra Tjänster</a></div>
+            <div><a href="#">Kontakta Oss</a></div>
+          </ul>
+        </nav>
+      </header>
+    </div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
