--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="src/hamburger.js" defer></script>
     <script src="src/header.js" defer></script>
+    <script
+      src="https://kit.fontawesome.com/045e87f357.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="src/style.css" />
     <title>PixelSpace</title>
   </head>
