--- a/index.html
+++ b/index.html
@@ -9,18 +9,19 @@
   </head>
   <body>
     <div id="app">
-      <header class="topnav" id="header">
-        <div class="logo">PixelSpace</div>
-        <label class="hamburger-menu">
-          <input type="checkbox">
+      <header class="header">
+        <div class="logo"><img src="Images/pixelspacelogo.png" alt=""></div>
+        <input type="checkbox" class="menu-btn">
+        <label for="menu-btn" class="menu-icon">
+          <span class="nav-icon"></span>
         </label>
-        <nav class="sidebar">
-          <ul>
-            <div><a href="#">Om oss</a></div>
-            <div><a href="#">Våra Tjänster</a></div>
-            <div><a href="#">Kontakta Oss</a></div>
-          </ul>
-        </nav>
+        <ul class="menu">
+          <li><a href="#">Hem</a></li>
+          <li><a href="#">Webbyro</a></li>
+          <li><a href="#">Om oss</a></li>
+          <li><a href="#">Våra tjänster</a></li>
+          <li><a href="#">Kontakta oss</a></li>
+        </ul>
       </header>
     </div>
     <script type="module" src="/main.js"></script>
