Added Our Services section

--- a/index.html
+++ b/index.html
@@ -9,5 +9,28 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/main.js"></script>
+
+    <section id="our-services">
+      <h2>Our Services</h2>
+      <div class="services-container">
+        <div class="service">
+          <h3>Development</h3>
+          <p>We build modern and effective web solutions tailored to your needs..</p>
+        </div>
+        <div class="service">
+          <h3>Design</h3>
+          <p>Our design process creates visually appealing and user-friendly interfaces.</p>
+        </div>
+        <div class="service">
+          <h3>Marketing</h3>
+          <p>We help you reach your target audience through strategic digital marketing..</p>
+        </div>
+        <div class="service">
+          <h3>Digital Strategy</h3>
+          <p>We develop a digital strategy to optimize your online presence.</p>
+        </div>
+      </div>
+    </section>
+    
   </body>
 </html>
