Add html for footer

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 
     <main id="main"></main>
 
+    <footer id="footer"></footer>
+
     <script type="module" src="src/main.js"></script>
   </body>
 </html>
