--- a/index.html
+++ b/index.html
@@ -9,19 +9,17 @@
   </head>
   <body>
     <div id="app">
-      <header class="header">
-        <div class="logo"><img src="Images/pixelspacelogo.png" alt=""></div>
-        <input type="checkbox" class="menu-btn">
-        <label for="menu-btn" class="menu-icon">
-          <span class="nav-icon"></span>
-        </label>
-        <ul class="menu">
-          <li><a href="#">Hem</a></li>
-          <li><a href="#">Webbyro</a></li>
-          <li><a href="#">Om oss</a></li>
-          <li><a href="#">Våra tjänster</a></li>
-          <li><a href="#">Kontakta oss</a></li>
-        </ul>
+      <header class="header">    
+        <nav>
+          <div class="logo"><img src="Images/pixelspacelogo.png" alt=""></div>    
+          <ul class="menu">
+            <li><a href="#">Hem</a></li>
+            <li><a href="#">Webbyro</a></li>
+            <li><a href="#">Om oss</a></li>
+            <li><a href="#">Våra tjänster</a></li>
+            <li><a href="#">Kontakta oss</a></li>
+          </ul>
+        </nav>
       </header>
     </div>
     <script type="module" src="/main.js"></script>
