Add HTML structure to About us section

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     </header>
 
     <main id="main"></main>
-    
-     <section id="our-services">
+
+    <section id="our-services">
       <h2>Our Services</h2>
       <div class="services-container">
         <div class="service">
@@ -55,6 +55,29 @@
         <div class="service">
           <h3>Digital Strategy</h3>
           <p>We develop a digital strategy to optimize your online presence.</p>
+        </div>
+      </div>
+    </section>
+
+    <section id="aboutUs">
+      <div id="history">
+        <h2 class="service">Our history</h2>
+        <p id="howWeStarted" class="story"></p>
+      </div>
+      <div id="team">
+        <h2 class="service">Out team</h2>
+        <div class="card">
+          <img />
+          <h3 id="Rosa" class="teamName">Rosa Parks</h3>
+          <p id="Rosa1" class="role">Sale&Marketing</p>
+        </div>
+        <div class="card">
+          <h3 id="Michelle" class="teamName">Michelle Obama</h3>
+          <p id="Michelle1" class="role">CEO</p>
+        </div>
+        <div class="card">
+          <h3 id="Condoleezza" class="teamName">Condoleezza Rice</h3>
+          <p id="Condoleezza1" class="role">Partner Relationship</p>
         </div>
       </div>
     </section>
