--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
       <div id="history">
         <h2 class="service">Our history</h2>
         <p id="howWeStarted" class="story"></p>
+        <img />
       </div>
       <div id="team">
         <h2 class="service">Out team</h2>
