Add images to About us section in index.html

--- a/index.html
+++ b/index.html
@@ -63,20 +63,25 @@
       <div id="history">
         <h2 class="service">Our history</h2>
         <p id="howWeStarted" class="story"></p>
-        <img />
+        <img
+          src="Images/History.png"
+          alt="Our company history represented as hands assembling a puzzle"
+        />
       </div>
       <div id="team">
         <h2 class="service">Out team</h2>
         <div class="card">
-          <img />
+          <img src="Images/Role1.png" alt="photo of Rosa Parks" />
           <h3 id="Rosa" class="teamName">Rosa Parks</h3>
           <p id="Rosa1" class="role">Sale&Marketing</p>
         </div>
         <div class="card">
+          <img src="Images/Role2.png" alt="photo of Michelle Obama" />
           <h3 id="Michelle" class="teamName">Michelle Obama</h3>
           <p id="Michelle1" class="role">CEO</p>
         </div>
         <div class="card">
+          <img src="Images/Role3.png" alt="photo of Condoleezza Rice" />
           <h3 id="Condoleezza" class="teamName">Condoleezza Rice</h3>
           <p id="Condoleezza1" class="role">Partner Relationship</p>
         </div>
