Add our text to our history part of the About us section

--- a/index.html
+++ b/index.html
@@ -62,7 +62,19 @@
     <section id="aboutUs">
       <div id="history">
         <h2 class="service">Our history</h2>
-        <p id="howWeStarted" class="story"></p>
+        <p id="howWeStarted" class="story">
+          It began with a spilled latte and a shared dream scribbled on a
+          napkin. Three friends, fueled by caffeine and a rebellious spirit
+          against bland websites, decided to ditch their corporate gigs and
+          launch <strong>PixelSpace</strong>. Their first office was a cramped
+          attic overflowing with quirky inspiration and a perpetually purring
+          cat. They won their first client with a pitch delivered on roller
+          skates. Word spread about their unconventional approach and designs
+          that popped with personality. Now, years later, they've traded the
+          attic for a vibrant studio, but their passion for bold creativity and
+          client collaboration remains. They're still a little bit rebellious,
+          and the cat occasionally visits.
+        </p>
         <img
           src="Images/History.png"
           alt="Our company history represented as hands assembling a puzzle"
