Add styling to About us section

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
     <section id="aboutUs">
       <div id="history">
-        <h2 class="service">Our history</h2>
+        <h2>Our history</h2>
         <p id="howWeStarted" class="story">
           It began with a spilled latte and a shared dream scribbled on a
           napkin. Three friends, fueled by caffeine and a rebellious spirit
@@ -81,21 +81,23 @@
         />
       </div>
       <div id="team">
-        <h2 class="service">Out team</h2>
-        <div class="card">
-          <img src="Images/Role1.png" alt="photo of Rosa Parks" />
-          <h3 id="Rosa" class="teamName">Rosa Parks</h3>
-          <p id="Rosa1" class="role">Sale&Marketing</p>
-        </div>
-        <div class="card">
-          <img src="Images/Role2.png" alt="photo of Michelle Obama" />
-          <h3 id="Michelle" class="teamName">Michelle Obama</h3>
-          <p id="Michelle1" class="role">CEO</p>
-        </div>
-        <div class="card">
-          <img src="Images/Role3.png" alt="photo of Condoleezza Rice" />
-          <h3 id="Condoleezza" class="teamName">Condoleezza Rice</h3>
-          <p id="Condoleezza1" class="role">Partner Relationship</p>
+        <h2>Out team</h2>
+        <div class="team-container">
+          <div class="card">
+            <img src="Images/Role1.png" alt="photo of Rosa Parks" />
+            <h3 id="Rosa" class="teamName">Rosa Parks</h3>
+            <p id="Rosa1" class="role">Sale&Marketing</p>
+          </div>
+          <div class="card">
+            <img src="Images/Role2.png" alt="photo of Michelle Obama" />
+            <h3 id="Michelle" class="teamName">Michelle Obama</h3>
+            <p id="Michelle1" class="role">CEO</p>
+          </div>
+          <div class="card">
+            <img src="Images/Role3.png" alt="photo of Condoleezza Rice" />
+            <h3 id="Condoleezza" class="teamName">Condoleezza Rice</h3>
+            <p id="Condoleezza1" class="role">Partner Relationship</p>
+          </div>
         </div>
       </div>
     </section>
