script file is added in the index html

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <li><a href="#">Webbyro</a></li>
           <li><a href="#">Om oss</a></li>
           <li><a href="#">Våra tjänster</a></li>
-          <li><a href="#">Kontakta oss</a></li>
+          <li><a href="contact.html">Kontakta oss</a></li>
         </ul>
       </nav>
     </header>
@@ -62,5 +62,6 @@
     <footer id="footer"></footer>
 
     <script type="module" src="src/main.js"></script>
+    <script type="module" src="src/contact.js"></script>
   </body>
 </html>
