anchor tag is added to the contact page to redirect to the home page

--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,8 @@
     <div class="form-container" id="form-container">
     <div id="form"></div>
     </div>
-    
+    <div><a href="index.html">BACK To Home Page</a></div>
     <script type="module" src="src/contact.js"></script>
+
 </body>
 </html>
