--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,7 @@
     <div id="form"></div>
     </div>
     <div><a href="index.html">BACK To Home Page</a></div>
+    <footer id="footer"></footer>
     <script type="module" src="src/contact.js"></script>
 
 </body>
