--- a/index.html
+++ b/index.html
@@ -14,17 +14,7 @@
     <title>PixelSpace</title>
   </head>
   <body>
-    <header class="header">
-      <nav>
-        <div class="logo"><img src="Images/pixelspacelogo.png" alt="" /></div>
-        <ul class="menu">
-          <li><a href="#">Hem</a></li>
-          <li><a href="#">Webbyro</a></li>
-          <li><a href="#">Om oss</a></li>
-          <li><a href="#">Våra tjänster</a></li>
-          <li><a href="contact.html">Kontakta oss</a></li>
-        </ul>
-      </nav>
+    <header class="header" id="header">
     </header>
 
     <main id="main"></main>
