--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="services-container">
         <div class="service">
           <h3>Development</h3>
-          <p>We build modern and effective web solutions tailored to your needs..</p>
+          <p>We build modern and effective web solutions tailored to your needs.</p>
         </div>
         <div class="service">
           <h3>Design</h3>
@@ -23,7 +23,7 @@
         </div>
         <div class="service">
           <h3>Marketing</h3>
-          <p>We help you reach your target audience through strategic digital marketing..</p>
+          <p>We help you reach your target audience through strategic digital marketing.</p>
         </div>
         <div class="service">
           <h3>Digital Strategy</h3>
