--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="src/style.css">
+    <script
+    src="https://kit.fontawesome.com/045e87f357.js"
+    crossorigin="anonymous"
+  ></script>
     <title>Document</title>
 </head>
 <body>
